# openman

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  todo.md  tsconfig.json  vite.config.ts
agents/: Cargo.toml
agents/config/: provider-models.json
agents/src/: domain.rs  file_mutation.rs  language_detection.rs  lib.rs  llm.rs  model_spec.rs  patch.rs  permission.rs  provider_service.rs
agents/src/context/: budget.rs  mod.rs  source.rs  system.rs
agents/src/database/: connection.rs  mod.rs  repositories.rs
agents/src/llm/: events.rs  request.rs  session.rs  subagent_registry.rs  xml_tools.rs
agents/src/llm/providers/: anthropic.rs  minimax.rs  minimax_token_plan.rs  mod.rs  openai.rs  openai_compatible_chat.rs
agents/src/permission_v2/: config.rs  mod.rs  rule.rs  ruleset.rs  service.rs  wildcard.rs
agents/src/sandbox/: command.rs  doom.rs  env.rs  mod.rs  network.rs  path.rs  shell.rs
agents/src/sessions/: conversation.rs  mod.rs  prompts.rs  service.rs
agents/src/tools/: apply_patch.rs  ask_peer.rs  edit.rs  external_directory.rs  glob.rs  grep.rs  invalid.rs  lsp.rs  mod.rs  plan.rs  question.rs  read.rs  shell.rs  skill.rs  task.rs  todo.rs  webfetch.rs  websearch.rs  write.rs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  main.rs
src-tauri/src/commands/: agent_commands.rs  conversation_commands.rs  file_commands.rs  mod.rs  permission_commands.rs  project_commands.rs  provider_commands.rs  session_commands.rs  settings_commands.rs
src-tauri/src/db/: connection.rs  repositories.rs
src-tauri/src/services/: agent_service.rs  context_indexer.rs  conversation_service.rs  file_service.rs  memory_service.rs  message_bus.rs  mod.rs  permission_map.rs  project_service.rs  session_service.rs  settings_service.rs  stack_detector.rs  tree_sitter.rs  watcher_service.rs
src/app/layout/: AppShell.tsx
src/components/sessions/: PermissionPromptBar.tsx  SessionCanvas.tsx  SessionCard.tsx  index.ts  (+7 more)
src/config/: provider-models.json
src/styles/: globals.css
(+23 files in other folders)
