[package]
name = "openman-agents"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
hyperpolyglot = "0.1.7"
ignore = "0.4"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "sync"] }
tracing = "0.1"
uuid = { version = "1.8", features = ["v4"] }
walkdir = "2.4"
