[package]
name = "openman-agents"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
bytes = "1.9"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
hyperpolyglot = "0.1.7"
ignore = "0.4"
ipnet = "2.12"
parking_lot = "0.12"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
rusqlite = { version = "0.40.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "sync", "macros"] }
tokio-stream = "0.1"
tracing = "0.1"
uuid = { version = "1.8", features = ["v4"] }
walkdir = "2.4"

[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"